fix: always show scrollbar

--- a/src/theme/global.scss
+++ b/src/theme/global.scss
@@ -8,6 +8,7 @@
 html {
   background: var(--bg-primary);
   transition: all 300ms ease;
+  overflow-y: scroll;
 }
 
 body {
